--- a/styles/styles.css
+++ b/styles/styles.css
@@ -610,10 +610,6 @@ video {
   z-index: 50;
 }
 
-.mt-10 {
-  margin-top: 2.5rem;
-}
-
 .flex {
   display: flex;
 }
@@ -746,10 +742,6 @@ video {
 
 .font-bree_regular {
   font-family: Bree_regular, arial;
-}
-
-.font-helvetic {
-  font-family: helvetic, arial;
 }
 
 .text-2xl {
@@ -910,8 +902,8 @@ video {
     margin-bottom: 1.5rem;
   }
 
-  .\33 20px\:mt-10 {
-    margin-top: 2.5rem;
+  .\33 20px\:mt-4 {
+    margin-top: 1rem;
   }
 
   .\33 20px\:inline-block {
@@ -1005,9 +997,9 @@ video {
     line-height: 2.25rem;
   }
 
-  .\33 20px\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
+  .\33 20px\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
   }
 
   .\33 20px\:text-lg {
@@ -1020,9 +1012,23 @@ video {
     line-height: 1.25rem;
   }
 
+  .\33 20px\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
   .\33 20px\:text-xs {
     font-size: 0.75rem;
     line-height: 1rem;
+  }
+
+  .\33 20px\:text-28px {
+    font-size: 28px;
+  }
+
+  .\33 20px\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 
   .\33 20px\:text-azul_catolica {
@@ -1104,12 +1110,6 @@ video {
     padding-top: 1.25rem;
     padding-bottom: 1.25rem;
   }
-
-  .\38 20px\:shadow-lg {
-    --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-    --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-  }
 }
 
 @media (min-width: 900px) {
@@ -1128,10 +1128,6 @@ video {
 }
 
 @media (min-width: 940px) {
-  .\39 40px\:mb-8 {
-    margin-bottom: 2rem;
-  }
-
   .\39 40px\:mt-0 {
     margin-top: 0px;
   }
@@ -1145,9 +1141,9 @@ video {
     padding-right: 30%;
   }
 
-  .\39 40px\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
+  .\39 40px\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
   }
 
   .\39 40px\:text-7xl {
@@ -1242,6 +1238,10 @@ video {
 }
 
 @media (min-width: 1360px) {
+  .\31 360px\:mt-10 {
+    margin-top: 2.5rem;
+  }
+
   .\31 360px\:mt-20 {
     margin-top: 5rem;
   }
@@ -1250,17 +1250,13 @@ video {
     height: 100vh;
   }
 
-  .\31 360px\:w-1300px {
-    width: 1300px;
-  }
-
   .\31 360px\:w-48 {
     width: 12rem;
   }
 
-  .\31 360px\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
+  .\31 360px\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 
   .\31 360px\:text-8xl {
@@ -1313,6 +1309,10 @@ video {
 }
 
 @media (min-width: 1500px) {
+  .\31 500px\:w-1200px {
+    width: 1200px;
+  }
+
   .\31 500px\:w-1400px {
     width: 1400px;
   }
