--- a/styles/styles.css
+++ b/styles/styles.css
@@ -578,8 +578,16 @@ video {
   left: 0px;
 }
 
+.left-2 {
+  left: 0.5rem;
+}
+
 .right-0 {
   right: 0px;
+}
+
+.right-2 {
+  right: 0.5rem;
 }
 
 .right-5 {
@@ -598,32 +606,8 @@ video {
   top: 1.25rem;
 }
 
-.right-2 {
-  right: 0.5rem;
-}
-
-.left-2 {
-  left: 0.5rem;
-}
-
-.right-4 {
-  right: 1rem;
-}
-
-.bottom-5 {
-  bottom: 1.25rem;
-}
-
-.bottom-0 {
-  bottom: 0px;
-}
-
-.bottom-4 {
-  bottom: 1rem;
-}
-
-.-bottom-4 {
-  bottom: -1rem;
+.z-10 {
+  z-index: 10;
 }
 
 .z-20 {
@@ -636,18 +620,6 @@ video {
 
 .z-50 {
   z-index: 50;
-}
-
-.z-10 {
-  z-index: 10;
-}
-
-.mt-7 {
-  margin-top: 1.75rem;
-}
-
-.mt-4 {
-  margin-top: 1rem;
 }
 
 .flex {
@@ -666,18 +638,6 @@ video {
   height: 100vh;
 }
 
-.h-3 {
-  height: 0.75rem;
-}
-
-.h-2\.5 {
-  height: 0.625rem;
-}
-
-.h-4 {
-  height: 1rem;
-}
-
 .w-7 {
   width: 1.75rem;
 }
@@ -688,26 +648,6 @@ video {
 
 .w-screen {
   width: 100vw;
-}
-
-.w-4 {
-  width: 1rem;
-}
-
-.w-20 {
-  width: 5rem;
-}
-
-.w-16 {
-  width: 4rem;
-}
-
-.w-3 {
-  width: 0.75rem;
-}
-
-.w-2\.5 {
-  width: 0.625rem;
 }
 
 .translate-y-1\/2 {
@@ -763,10 +703,6 @@ video {
   border-radius: 0.125rem;
 }
 
-.rounded-full {
-  border-radius: 9999px;
-}
-
 .bg-amarillo_catolica {
   --tw-bg-opacity: 1;
   background-color: rgb(244 218 64 / var(--tw-bg-opacity));
@@ -790,16 +726,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-gris_catolica_letra {
-  --tw-bg-opacity: 1;
-  background-color: rgb(139 139 139 / var(--tw-bg-opacity));
-}
-
-.bg-orange-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(249 115 22 / var(--tw-bg-opacity));
 }
 
 .object-cover {
@@ -848,15 +774,6 @@ video {
   line-height: 2rem;
 }
 
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-
-.font-bold {
-  font-weight: 700;
-}
-
 .text-amarillo_catolica {
   --tw-text-opacity: 1;
   color: rgb(244 218 64 / var(--tw-text-opacity));
@@ -891,16 +808,12 @@ video {
   opacity: 0.5;
 }
 
-.opacity-95 {
-  opacity: 0.95;
-}
-
 .opacity-70 {
   opacity: 0.7;
 }
 
-.opacity-100 {
-  opacity: 1;
+.opacity-95 {
+  opacity: 0.95;
 }
 
 .outline {
@@ -972,6 +885,16 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-amarillo_catolica:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(244 218 64 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-verde_catolica:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(54 162 188 / var(--tw-bg-opacity));
+}
+
 .hover\:text-black:hover {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
@@ -982,36 +905,36 @@ video {
     position: absolute;
   }
 
-  .\33 20px\:top-0 {
-    top: 0px;
-  }
-
-  .\33 20px\:top-2\/4 {
-    top: 50%;
-  }
-
-  .\33 20px\:top-3\/4 {
-    top: 75%;
-  }
-
-  .\33 20px\:top-1\/4 {
-    top: 25%;
-  }
-
-  .\33 20px\:top-1\/3 {
-    top: 33.333333%;
-  }
-
-  .\33 20px\:right-4 {
-    right: 1rem;
+  .\33 20px\:relative {
+    position: relative;
   }
 
   .\33 20px\:bottom-5 {
     bottom: 1.25rem;
   }
 
-  .\33 20px\:z-40 {
-    z-index: 40;
+  .\33 20px\:left-1\/2 {
+    left: 50%;
+  }
+
+  .\33 20px\:right-4 {
+    right: 1rem;
+  }
+
+  .\33 20px\:top-0 {
+    top: 0px;
+  }
+
+  .\33 20px\:top-1\/2 {
+    top: 50%;
+  }
+
+  .\33 20px\:top-1\/3 {
+    top: 33.333333%;
+  }
+
+  .\33 20px\:z-50 {
+    z-index: 50;
   }
 
   .\33 20px\:m-auto {
@@ -1033,6 +956,11 @@ video {
     margin-bottom: 2.5rem;
   }
 
+  .\33 20px\:my-12 {
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+  }
+
   .\33 20px\:my-5 {
     margin-top: 1.25rem;
     margin-bottom: 1.25rem;
@@ -1046,24 +974,16 @@ video {
     margin-bottom: 0.75rem;
   }
 
+  .\33 20px\:mb-4 {
+    margin-bottom: 1rem;
+  }
+
   .\33 20px\:mb-6 {
     margin-bottom: 1.5rem;
   }
 
   .\33 20px\:mt-4 {
     margin-top: 1rem;
-  }
-
-  .\33 20px\:mb-4 {
-    margin-bottom: 1rem;
-  }
-
-  .\33 20px\:mt-3 {
-    margin-top: 0.75rem;
-  }
-
-  .\33 20px\:mt-5 {
-    margin-top: 1.25rem;
   }
 
   .\33 20px\:inline-block {
@@ -1082,28 +1002,44 @@ video {
     height: 8rem;
   }
 
+  .\33 20px\:h-44 {
+    height: 11rem;
+  }
+
   .\33 20px\:h-550px {
     height: 550px;
+  }
+
+  .\33 20px\:h-72 {
+    height: 18rem;
   }
 
   .\33 20px\:h-full {
     height: 100%;
   }
 
-  .\33 20px\:h-52 {
-    height: 13rem;
-  }
-
-  .\33 20px\:h-44 {
-    height: 11rem;
-  }
-
   .\33 20px\:w-11\/12 {
     width: 91.666667%;
   }
 
+  .\33 20px\:w-14 {
+    width: 3.5rem;
+  }
+
   .\33 20px\:w-32 {
     width: 8rem;
+  }
+
+  .\33 20px\:w-5 {
+    width: 1.25rem;
+  }
+
+  .\33 20px\:w-7 {
+    width: 1.75rem;
+  }
+
+  .\33 20px\:w-72 {
+    width: 18rem;
   }
 
   .\33 20px\:w-8 {
@@ -1114,56 +1050,46 @@ video {
     width: 100%;
   }
 
-  .\33 20px\:w-16 {
-    width: 4rem;
+  .\33 20px\:-translate-x-1\/2 {
+    --tw-translate-x: -50%;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
-  .\33 20px\:w-5 {
-    width: 1.25rem;
+  .\33 20px\:-translate-y-1\/2 {
+    --tw-translate-y: -50%;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
-  .\33 20px\:w-4 {
-    width: 1rem;
+  .\33 20px\:transform {
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
-  .\33 20px\:w-10 {
-    width: 2.5rem;
-  }
-
-  .\33 20px\:w-7 {
-    width: 1.75rem;
-  }
-
-  .\33 20px\:w-14 {
-    width: 3.5rem;
+  .\33 20px\:flex-wrap {
+    flex-wrap: wrap;
   }
 
   .\33 20px\:items-center {
     align-items: center;
   }
 
-  .\33 20px\:justify-center {
-    justify-content: center;
-  }
-
   .\33 20px\:justify-between {
     justify-content: space-between;
-  }
-
-  .\33 20px\:gap-2 {
-    gap: 0.5rem;
   }
 
   .\33 20px\:gap-1 {
     gap: 0.25rem;
   }
 
-  .\33 20px\:gap-4 {
-    gap: 1rem;
+  .\33 20px\:gap-2 {
+    gap: 0.5rem;
   }
 
   .\33 20px\:rounded-full {
     border-radius: 9999px;
+  }
+
+  .\33 20px\:rounded-lg {
+    border-radius: 0.5rem;
   }
 
   .\33 20px\:border {
@@ -1173,6 +1099,11 @@ video {
   .\33 20px\:border-gray-400 {
     --tw-border-opacity: 1;
     border-color: rgb(156 163 175 / var(--tw-border-opacity));
+  }
+
+  .\33 20px\:bg-black {
+    --tw-bg-opacity: 1;
+    background-color: rgb(0 0 0 / var(--tw-bg-opacity));
   }
 
   .\33 20px\:bg-white {
@@ -1185,12 +1116,9 @@ video {
        object-fit: cover;
   }
 
-  .\33 20px\:p-3 {
-    padding: 0.75rem;
-  }
-
-  .\33 20px\:p-2 {
-    padding: 0.5rem;
+  .\33 20px\:px-2 {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
   }
 
   .\33 20px\:px-4 {
@@ -1213,19 +1141,14 @@ video {
     padding-bottom: 0.75rem;
   }
 
-  .\33 20px\:py-9 {
-    padding-top: 2.25rem;
-    padding-bottom: 2.25rem;
-  }
-
-  .\33 20px\:px-2 {
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
-  }
-
   .\33 20px\:py-4 {
     padding-top: 1rem;
     padding-bottom: 1rem;
+  }
+
+  .\33 20px\:py-9 {
+    padding-top: 2.25rem;
+    padding-bottom: 2.25rem;
   }
 
   .\33 20px\:text-center {
@@ -1240,12 +1163,21 @@ video {
     font-family: Bree_regular, arial;
   }
 
+  .\33 20px\:font-helvetic {
+    font-family: helvetic, arial;
+  }
+
   .\33 20px\:text-15px {
     font-size: 15px;
   }
 
   .\33 20px\:text-28px {
     font-size: 28px;
+  }
+
+  .\33 20px\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 
   .\33 20px\:text-3xl {
@@ -1291,6 +1223,15 @@ video {
   .\33 20px\:text-verde_catolica {
     --tw-text-opacity: 1;
     color: rgb(54 162 188 / var(--tw-text-opacity));
+  }
+
+  .\33 20px\:text-white {
+    --tw-text-opacity: 1;
+    color: rgb(255 255 255 / var(--tw-text-opacity));
+  }
+
+  .\33 20px\:opacity-70 {
+    opacity: 0.7;
   }
 
   .\33 20px\:shadow-lg {
@@ -1374,8 +1315,16 @@ video {
     display: none;
   }
 
+  .\38 20px\:h-80 {
+    height: 20rem;
+  }
+
   .\38 20px\:w-40 {
     width: 10rem;
+  }
+
+  .\38 20px\:w-96 {
+    width: 24rem;
   }
 
   .\38 20px\:bg-transparent {
@@ -1394,6 +1343,15 @@ video {
 }
 
 @media (min-width: 900px) {
+  .\39 00px\:mx-auto {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .\39 00px\:w-900px {
+    width: 900px;
+  }
+
   .\39 00px\:text-3xl {
     font-size: 1.875rem;
     line-height: 2.25rem;
@@ -1407,6 +1365,10 @@ video {
 
   .\39 40px\:h-723px {
     height: 723px;
+  }
+
+  .\39 40px\:w-940px {
+    width: 940px;
   }
 
   .\39 40px\:px-25\% {
@@ -1432,6 +1394,12 @@ video {
   .\39 40px\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
+  }
+}
+
+@media (min-width: 1000px) {
+  .\31 000px\:w-1000px {
+    width: 1000px;
   }
 }
 
@@ -1519,6 +1487,10 @@ video {
     width: 12rem;
   }
 
+  .\31 360px\:w-1300px {
+    width: 1300px;
+  }
+
   .\31 360px\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
@@ -1536,16 +1508,12 @@ video {
 }
 
 @media (min-width: 1400px) {
-  .\31 400px\:right-6 {
-    right: 1.5rem;
+  .\31 400px\:bottom-6 {
+    bottom: 1.5rem;
   }
 
   .\31 400px\:right-8 {
     right: 2rem;
-  }
-
-  .\31 400px\:bottom-6 {
-    bottom: 1.5rem;
   }
 
   .\31 400px\:mx-auto {
@@ -1557,20 +1525,16 @@ video {
     height: 12rem;
   }
 
-  .\31 400px\:w-48 {
-    width: 12rem;
-  }
-
-  .\31 400px\:w-80 {
-    width: 20rem;
-  }
-
   .\31 400px\:w-1400px {
     width: 1400px;
   }
 
   .\31 400px\:w-16 {
     width: 4rem;
+  }
+
+  .\31 400px\:w-48 {
+    width: 12rem;
   }
 
   .\31 400px\:text-4xl {
@@ -1597,11 +1561,6 @@ video {
 @media (min-width: 1500px) {
   .\31 500px\:w-20 {
     width: 5rem;
-  }
-
-  .\31 500px\:px-6 {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
   }
 
   .\31 500px\:px-7 {
