--- a/styles/styles.css
+++ b/styles/styles.css
@@ -638,6 +638,14 @@ video {
   height: 100vh;
 }
 
+.h-0 {
+  height: 0px;
+}
+
+.h-24 {
+  height: 6rem;
+}
+
 .w-7 {
   width: 1.75rem;
 }
@@ -691,6 +699,10 @@ video {
   gap: 1.75rem;
 }
 
+.overflow-hidden {
+  overflow: hidden;
+}
+
 .rounded-lg {
   border-radius: 0.5rem;
 }
@@ -701,6 +713,10 @@ video {
 
 .rounded-sm {
   border-radius: 0.125rem;
+}
+
+.border-2 {
+  border-width: 2px;
 }
 
 .bg-amarillo_catolica {
@@ -774,6 +790,31 @@ video {
   line-height: 2rem;
 }
 
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
 .text-amarillo_catolica {
   --tw-text-opacity: 1;
   color: rgb(244 218 64 / var(--tw-text-opacity));
@@ -816,6 +857,22 @@ video {
   opacity: 0.95;
 }
 
+.opacity-40 {
+  opacity: 0.4;
+}
+
+.opacity-60 {
+  opacity: 0.6;
+}
+
+.opacity-80 {
+  opacity: 0.8;
+}
+
+.opacity-90 {
+  opacity: 0.9;
+}
+
 .outline {
   outline-style: solid;
 }
@@ -844,6 +901,12 @@ video {
   transition-duration: 150ms;
 }
 
+.transition-all {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .duration-300 {
   transition-duration: 300ms;
 }
@@ -854,6 +917,11 @@ video {
 
 .hover\:cursor-pointer:hover {
   cursor: pointer;
+}
+
+.hover\:bg-amarillo_catolica:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(244 218 64 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-azul_catolica:hover {
@@ -880,19 +948,14 @@ video {
   background-color: transparent;
 }
 
-.hover\:bg-white:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-amarillo_catolica:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(244 218 64 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-verde_catolica:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(54 162 188 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-white:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .hover\:text-black:hover {
@@ -933,8 +996,28 @@ video {
     top: 33.333333%;
   }
 
+  .\33 20px\:left-0 {
+    left: 0px;
+  }
+
+  .\33 20px\:top-full {
+    top: 100%;
+  }
+
+  .\33 20px\:top-72 {
+    top: 18rem;
+  }
+
+  .\33 20px\:top-24 {
+    top: 6rem;
+  }
+
   .\33 20px\:z-50 {
     z-index: 50;
+  }
+
+  .\33 20px\:z-40 {
+    z-index: 40;
   }
 
   .\33 20px\:m-auto {
@@ -986,6 +1069,14 @@ video {
     margin-top: 1rem;
   }
 
+  .\33 20px\:mb-5 {
+    margin-bottom: 1.25rem;
+  }
+
+  .\33 20px\:mb-7 {
+    margin-bottom: 1.75rem;
+  }
+
   .\33 20px\:inline-block {
     display: inline-block;
   }
@@ -1016,6 +1107,22 @@ video {
 
   .\33 20px\:h-full {
     height: 100%;
+  }
+
+  .\33 20px\:h-12 {
+    height: 3rem;
+  }
+
+  .\33 20px\:h-16 {
+    height: 4rem;
+  }
+
+  .\33 20px\:h-24 {
+    height: 6rem;
+  }
+
+  .\33 20px\:h-0 {
+    height: 0px;
   }
 
   .\33 20px\:w-11\/12 {
@@ -1072,6 +1179,10 @@ video {
     align-items: center;
   }
 
+  .\33 20px\:justify-center {
+    justify-content: center;
+  }
+
   .\33 20px\:justify-between {
     justify-content: space-between;
   }
@@ -1082,6 +1193,22 @@ video {
 
   .\33 20px\:gap-2 {
     gap: 0.5rem;
+  }
+
+  .\33 20px\:gap-3 {
+    gap: 0.75rem;
+  }
+
+  .\33 20px\:gap-5 {
+    gap: 1.25rem;
+  }
+
+  .\33 20px\:gap-4 {
+    gap: 1rem;
+  }
+
+  .\33 20px\:overflow-hidden {
+    overflow: hidden;
   }
 
   .\33 20px\:rounded-full {
@@ -1096,9 +1223,18 @@ video {
     border-width: 1px;
   }
 
+  .\33 20px\:border-2 {
+    border-width: 2px;
+  }
+
   .\33 20px\:border-gray-400 {
     --tw-border-opacity: 1;
     border-color: rgb(156 163 175 / var(--tw-border-opacity));
+  }
+
+  .\33 20px\:border-white {
+    --tw-border-opacity: 1;
+    border-color: rgb(255 255 255 / var(--tw-border-opacity));
   }
 
   .\33 20px\:bg-black {
@@ -1149,6 +1285,26 @@ video {
   .\33 20px\:py-9 {
     padding-top: 2.25rem;
     padding-bottom: 2.25rem;
+  }
+
+  .\33 20px\:py-2 {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+
+  .\33 20px\:py-1 {
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+  }
+
+  .\33 20px\:px-6 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
+  .\33 20px\:px-3 {
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
   }
 
   .\33 20px\:text-center {
@@ -1238,6 +1394,18 @@ video {
     --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
     --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
     box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  }
+
+  .hover\:320px\:top-0:hover {
+    top: 0px;
+  }
+
+  .\33 20px\:hover\:top-0:hover {
+    top: 0px;
+  }
+
+  .\33 20px\:hover\:h-24:hover {
+    height: 6rem;
   }
 }
 
@@ -1397,12 +1565,6 @@ video {
   }
 }
 
-@media (min-width: 1000px) {
-  .\31 000px\:w-1000px {
-    width: 1000px;
-  }
-}
-
 @media (min-width: 1100px) {
   .\31 100px\:mx-auto {
     margin-left: auto;
@@ -1483,12 +1645,12 @@ video {
     height: 100vh;
   }
 
-  .\31 360px\:w-48 {
-    width: 12rem;
-  }
-
   .\31 360px\:w-1300px {
     width: 1300px;
+  }
+
+  .\31 360px\:w-48 {
+    width: 12rem;
   }
 
   .\31 360px\:text-4xl {
