--- a/styles/styles.css
+++ b/styles/styles.css
@@ -638,14 +638,6 @@ video {
   height: 100vh;
 }
 
-.h-0 {
-  height: 0px;
-}
-
-.h-24 {
-  height: 6rem;
-}
-
 .w-7 {
   width: 1.75rem;
 }
@@ -713,10 +705,6 @@ video {
 
 .rounded-sm {
   border-radius: 0.125rem;
-}
-
-.border-2 {
-  border-width: 2px;
 }
 
 .bg-amarillo_catolica {
@@ -790,26 +778,6 @@ video {
   line-height: 2rem;
 }
 
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
-
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-
-.text-xs {
-  font-size: 0.75rem;
-  line-height: 1rem;
-}
-
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
@@ -853,24 +821,12 @@ video {
   opacity: 0.7;
 }
 
-.opacity-95 {
-  opacity: 0.95;
-}
-
-.opacity-40 {
-  opacity: 0.4;
-}
-
-.opacity-60 {
-  opacity: 0.6;
-}
-
-.opacity-80 {
-  opacity: 0.8;
-}
-
 .opacity-90 {
   opacity: 0.9;
+}
+
+.opacity-95 {
+  opacity: 0.95;
 }
 
 .outline {
@@ -976,6 +932,10 @@ video {
     bottom: 1.25rem;
   }
 
+  .\33 20px\:left-0 {
+    left: 0px;
+  }
+
   .\33 20px\:left-1\/2 {
     left: 50%;
   }
@@ -996,28 +956,8 @@ video {
     top: 33.333333%;
   }
 
-  .\33 20px\:left-0 {
-    left: 0px;
-  }
-
-  .\33 20px\:top-full {
-    top: 100%;
-  }
-
-  .\33 20px\:top-72 {
-    top: 18rem;
-  }
-
-  .\33 20px\:top-24 {
-    top: 6rem;
-  }
-
   .\33 20px\:z-50 {
     z-index: 50;
-  }
-
-  .\33 20px\:z-40 {
-    z-index: 40;
   }
 
   .\33 20px\:m-auto {
@@ -1065,16 +1005,16 @@ video {
     margin-bottom: 1.5rem;
   }
 
+  .\33 20px\:mb-7 {
+    margin-bottom: 1.75rem;
+  }
+
   .\33 20px\:mt-4 {
     margin-top: 1rem;
   }
 
-  .\33 20px\:mb-5 {
-    margin-bottom: 1.25rem;
-  }
-
-  .\33 20px\:mb-7 {
-    margin-bottom: 1.75rem;
+  .\33 20px\:mt-5 {
+    margin-top: 1.25rem;
   }
 
   .\33 20px\:inline-block {
@@ -1087,6 +1027,14 @@ video {
 
   .\33 20px\:hidden {
     display: none;
+  }
+
+  .\33 20px\:h-0 {
+    height: 0px;
+  }
+
+  .\33 20px\:h-24 {
+    height: 6rem;
   }
 
   .\33 20px\:h-32 {
@@ -1107,22 +1055,6 @@ video {
 
   .\33 20px\:h-full {
     height: 100%;
-  }
-
-  .\33 20px\:h-12 {
-    height: 3rem;
-  }
-
-  .\33 20px\:h-16 {
-    height: 4rem;
-  }
-
-  .\33 20px\:h-24 {
-    height: 6rem;
-  }
-
-  .\33 20px\:h-0 {
-    height: 0px;
   }
 
   .\33 20px\:w-11\/12 {
@@ -1199,14 +1131,6 @@ video {
     gap: 0.75rem;
   }
 
-  .\33 20px\:gap-5 {
-    gap: 1.25rem;
-  }
-
-  .\33 20px\:gap-4 {
-    gap: 1rem;
-  }
-
   .\33 20px\:overflow-hidden {
     overflow: hidden;
   }
@@ -1272,6 +1196,16 @@ video {
     padding-right: 8%;
   }
 
+  .\33 20px\:px-6 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
+  .\33 20px\:py-1 {
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+  }
+
   .\33 20px\:py-3 {
     padding-top: 0.75rem;
     padding-bottom: 0.75rem;
@@ -1285,26 +1219,6 @@ video {
   .\33 20px\:py-9 {
     padding-top: 2.25rem;
     padding-bottom: 2.25rem;
-  }
-
-  .\33 20px\:py-2 {
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-  }
-
-  .\33 20px\:py-1 {
-    padding-top: 0.25rem;
-    padding-bottom: 0.25rem;
-  }
-
-  .\33 20px\:px-6 {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
-  }
-
-  .\33 20px\:px-3 {
-    padding-left: 0.75rem;
-    padding-right: 0.75rem;
   }
 
   .\33 20px\:text-center {
@@ -1394,18 +1308,6 @@ video {
     --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
     --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
     box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-  }
-
-  .hover\:320px\:top-0:hover {
-    top: 0px;
-  }
-
-  .\33 20px\:hover\:top-0:hover {
-    top: 0px;
-  }
-
-  .\33 20px\:hover\:h-24:hover {
-    height: 6rem;
   }
 }
 
