--- a/styles/styles.css
+++ b/styles/styles.css
@@ -956,8 +956,16 @@ video {
     top: 33.333333%;
   }
 
+  .\33 20px\:bottom-0 {
+    bottom: 0px;
+  }
+
   .\33 20px\:z-50 {
     z-index: 50;
+  }
+
+  .\33 20px\:z-20 {
+    z-index: 20;
   }
 
   .\33 20px\:m-auto {
@@ -1057,6 +1065,10 @@ video {
     height: 100%;
   }
 
+  .\33 20px\:h-80 {
+    height: 20rem;
+  }
+
   .\33 20px\:w-11\/12 {
     width: 91.666667%;
   }
@@ -1087,6 +1099,10 @@ video {
 
   .\33 20px\:w-full {
     width: 100%;
+  }
+
+  .\33 20px\:w-64 {
+    width: 16rem;
   }
 
   .\33 20px\:-translate-x-1\/2 {
@@ -1131,6 +1147,10 @@ video {
     gap: 0.75rem;
   }
 
+  .\33 20px\:gap-5 {
+    gap: 1.25rem;
+  }
+
   .\33 20px\:overflow-hidden {
     overflow: hidden;
   }
@@ -1141,6 +1161,11 @@ video {
 
   .\33 20px\:rounded-lg {
     border-radius: 0.5rem;
+  }
+
+  .\33 20px\:rounded-b-lg {
+    border-bottom-right-radius: 0.5rem;
+    border-bottom-left-radius: 0.5rem;
   }
 
   .\33 20px\:border {
@@ -1169,6 +1194,11 @@ video {
   .\33 20px\:bg-white {
     --tw-bg-opacity: 1;
     background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  }
+
+  .\33 20px\:bg-blue-600 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(37 99 235 / var(--tw-bg-opacity));
   }
 
   .\33 20px\:object-cover {
@@ -1219,6 +1249,11 @@ video {
   .\33 20px\:py-9 {
     padding-top: 2.25rem;
     padding-bottom: 2.25rem;
+  }
+
+  .\33 20px\:py-2 {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
   }
 
   .\33 20px\:text-center {
