--- a/styles/styles.css
+++ b/styles/styles.css
@@ -691,10 +691,6 @@ video {
   gap: 1.75rem;
 }
 
-.overflow-hidden {
-  overflow: hidden;
-}
-
 .rounded-lg {
   border-radius: 0.5rem;
 }
@@ -705,6 +701,22 @@ video {
 
 .rounded-sm {
   border-radius: 0.125rem;
+}
+
+.rounded-ee-lg {
+  border-end-end-radius: 0.5rem;
+}
+
+.rounded-ee-xl {
+  border-end-end-radius: 0.75rem;
+}
+
+.rounded-ee-2xl {
+  border-end-end-radius: 1rem;
+}
+
+.rounded-ee-3xl {
+  border-end-end-radius: 1.5rem;
 }
 
 .bg-amarillo_catolica {
@@ -778,11 +790,6 @@ video {
   line-height: 2rem;
 }
 
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
 .text-amarillo_catolica {
   --tw-text-opacity: 1;
   color: rgb(244 218 64 / var(--tw-text-opacity));
@@ -821,10 +828,6 @@ video {
   opacity: 0.7;
 }
 
-.opacity-90 {
-  opacity: 0.9;
-}
-
 .opacity-95 {
   opacity: 0.95;
 }
@@ -853,12 +856,6 @@ video {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
-.transition-all {
-  transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
@@ -928,6 +925,10 @@ video {
     position: relative;
   }
 
+  .\33 20px\:bottom-0 {
+    bottom: 0px;
+  }
+
   .\33 20px\:bottom-5 {
     bottom: 1.25rem;
   }
@@ -956,16 +957,12 @@ video {
     top: 33.333333%;
   }
 
-  .\33 20px\:bottom-0 {
-    bottom: 0px;
+  .\33 20px\:z-20 {
+    z-index: 20;
   }
 
   .\33 20px\:z-50 {
     z-index: 50;
-  }
-
-  .\33 20px\:z-20 {
-    z-index: 20;
   }
 
   .\33 20px\:m-auto {
@@ -1013,16 +1010,8 @@ video {
     margin-bottom: 1.5rem;
   }
 
-  .\33 20px\:mb-7 {
-    margin-bottom: 1.75rem;
-  }
-
   .\33 20px\:mt-4 {
     margin-top: 1rem;
-  }
-
-  .\33 20px\:mt-5 {
-    margin-top: 1.25rem;
   }
 
   .\33 20px\:inline-block {
@@ -1035,14 +1024,6 @@ video {
 
   .\33 20px\:hidden {
     display: none;
-  }
-
-  .\33 20px\:h-0 {
-    height: 0px;
-  }
-
-  .\33 20px\:h-24 {
-    height: 6rem;
   }
 
   .\33 20px\:h-32 {
@@ -1061,12 +1042,12 @@ video {
     height: 18rem;
   }
 
-  .\33 20px\:h-full {
-    height: 100%;
-  }
-
   .\33 20px\:h-80 {
     height: 20rem;
+  }
+
+  .\33 20px\:h-full {
+    height: 100%;
   }
 
   .\33 20px\:w-11\/12 {
@@ -1085,6 +1066,10 @@ video {
     width: 1.25rem;
   }
 
+  .\33 20px\:w-64 {
+    width: 16rem;
+  }
+
   .\33 20px\:w-7 {
     width: 1.75rem;
   }
@@ -1099,10 +1084,6 @@ video {
 
   .\33 20px\:w-full {
     width: 100%;
-  }
-
-  .\33 20px\:w-64 {
-    width: 16rem;
   }
 
   .\33 20px\:-translate-x-1\/2 {
@@ -1127,10 +1108,6 @@ video {
     align-items: center;
   }
 
-  .\33 20px\:justify-center {
-    justify-content: center;
-  }
-
   .\33 20px\:justify-between {
     justify-content: space-between;
   }
@@ -1143,16 +1120,8 @@ video {
     gap: 0.5rem;
   }
 
-  .\33 20px\:gap-3 {
-    gap: 0.75rem;
-  }
-
   .\33 20px\:gap-5 {
     gap: 1.25rem;
-  }
-
-  .\33 20px\:overflow-hidden {
-    overflow: hidden;
   }
 
   .\33 20px\:rounded-full {
@@ -1168,12 +1137,20 @@ video {
     border-bottom-left-radius: 0.5rem;
   }
 
-  .\33 20px\:border {
-    border-width: 1px;
+  .\33 20px\:rounded-ee-3xl {
+    border-end-end-radius: 1.5rem;
   }
 
-  .\33 20px\:border-2 {
-    border-width: 2px;
+  .\33 20px\:rounded-ss-3xl {
+    border-start-start-radius: 1.5rem;
+  }
+
+  .\33 20px\:rounded-ss-full {
+    border-start-start-radius: 9999px;
+  }
+
+  .\33 20px\:border {
+    border-width: 1px;
   }
 
   .\33 20px\:border-gray-400 {
@@ -1181,9 +1158,14 @@ video {
     border-color: rgb(156 163 175 / var(--tw-border-opacity));
   }
 
-  .\33 20px\:border-white {
-    --tw-border-opacity: 1;
-    border-color: rgb(255 255 255 / var(--tw-border-opacity));
+  .\33 20px\:bg-amarillo_catolica {
+    --tw-bg-opacity: 1;
+    background-color: rgb(244 218 64 / var(--tw-bg-opacity));
+  }
+
+  .\33 20px\:bg-azul_catolica {
+    --tw-bg-opacity: 1;
+    background-color: rgb(27 92 255 / var(--tw-bg-opacity));
   }
 
   .\33 20px\:bg-black {
@@ -1191,14 +1173,14 @@ video {
     background-color: rgb(0 0 0 / var(--tw-bg-opacity));
   }
 
+  .\33 20px\:bg-verde_catolica {
+    --tw-bg-opacity: 1;
+    background-color: rgb(54 162 188 / var(--tw-bg-opacity));
+  }
+
   .\33 20px\:bg-white {
     --tw-bg-opacity: 1;
     background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-  }
-
-  .\33 20px\:bg-blue-600 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(37 99 235 / var(--tw-bg-opacity));
   }
 
   .\33 20px\:object-cover {
@@ -1226,11 +1208,6 @@ video {
     padding-right: 8%;
   }
 
-  .\33 20px\:px-6 {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
-  }
-
   .\33 20px\:py-1 {
     padding-top: 0.25rem;
     padding-bottom: 0.25rem;
@@ -1249,11 +1226,6 @@ video {
   .\33 20px\:py-9 {
     padding-top: 2.25rem;
     padding-bottom: 2.25rem;
-  }
-
-  .\33 20px\:py-2 {
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
   }
 
   .\33 20px\:text-center {
@@ -1344,6 +1316,21 @@ video {
     --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
     box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
   }
+
+  .hover\:320px\:bg-blue-500:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+  }
+
+  .hover\:320px\:bg-hover_verde_catolica:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgb(75 184 211 / var(--tw-bg-opacity));
+  }
+
+  .hover\:320px\:bg-yellow-200:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgb(254 240 138 / var(--tw-bg-opacity));
+  }
 }
 
 @media (min-width: 440px) {
@@ -1397,8 +1384,16 @@ video {
     margin-right: 0.5rem;
   }
 
+  .\37 00px\:h-96 {
+    height: 24rem;
+  }
+
   .\37 00px\:w-600px {
     width: 600px;
+  }
+
+  .\37 00px\:w-80 {
+    width: 20rem;
   }
 
   .\37 00px\:px-4 {
@@ -1499,6 +1494,12 @@ video {
   .\39 40px\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
+  }
+}
+
+@media (min-width: 1000px) {
+  .\31 000px\:w-1000px {
+    width: 1000px;
   }
 }
 
