--- a/styles/styles.css
+++ b/styles/styles.css
@@ -626,10 +626,6 @@ video {
   z-index: 50;
 }
 
-.col-end-2 {
-  grid-column-end: 2;
-}
-
 .flex {
   display: flex;
 }
@@ -660,10 +656,6 @@ video {
 
 .w-screen {
   width: 100vw;
-}
-
-.flex-1 {
-  flex: 1 1 0%;
 }
 
 .translate-y-1\/2 {
@@ -919,6 +911,11 @@ video {
   background-color: rgb(27 92 255 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-black:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-gray-300:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(209 213 219 / var(--tw-bg-opacity));
@@ -1055,12 +1052,20 @@ video {
     margin-top: 2.5rem;
   }
 
+  .\33 20px\:mt-14 {
+    margin-top: 3.5rem;
+  }
+
   .\33 20px\:mt-28 {
     margin-top: 7rem;
   }
 
   .\33 20px\:mt-4 {
     margin-top: 1rem;
+  }
+
+  .\33 20px\:mt-6 {
+    margin-top: 1.5rem;
   }
 
   .\33 20px\:mt-7 {
@@ -1183,10 +1188,6 @@ video {
     width: 100%;
   }
 
-  .\33 20px\:basis-11\/12 {
-    flex-basis: 91.666667%;
-  }
-
   .\33 20px\:-translate-x-1\/2 {
     --tw-translate-x: -50%;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1211,6 +1212,10 @@ video {
 
   .\33 20px\:items-center {
     align-items: center;
+  }
+
+  .\33 20px\:justify-center {
+    justify-content: center;
   }
 
   .\33 20px\:justify-between {
@@ -1449,8 +1454,17 @@ video {
     box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
   }
 
+  .\33 20px\:duration-300 {
+    transition-duration: 300ms;
+  }
+
   .\33 20px\:hover\:cursor-pointer:hover {
     cursor: pointer;
+  }
+
+  .\33 20px\:hover\:bg-hover_verde_catolica:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgb(75 184 211 / var(--tw-bg-opacity));
   }
 
   .hover\:320px\:bg-blue-500:hover {
@@ -1490,10 +1504,6 @@ video {
   .\34 40px\:w-96 {
     width: 24rem;
   }
-
-  .\34 40px\:basis-400px {
-    flex-basis: 400px;
-  }
 }
 
 @media (min-width: 540px) {
@@ -1516,6 +1526,12 @@ video {
   .\35 40px\:px-12 {
     padding-left: 3rem;
     padding-right: 3rem;
+  }
+}
+
+@media (min-width: 640px) {
+  .\36 40px\:w-600px {
+    width: 600px;
   }
 }
 
@@ -1563,20 +1579,6 @@ video {
 
   .\37 00px\:text-start {
     text-align: start;
-  }
-}
-
-@media (min-width: 816px) {
-  .\38 16px\:col-start-1 {
-    grid-column-start: 1;
-  }
-
-  .\38 16px\:row-start-1 {
-    grid-row-start: 1;
-  }
-
-  .\38 16px\:row-end-2 {
-    grid-row-end: 2;
   }
 }
 
@@ -1685,6 +1687,19 @@ video {
 }
 
 @media (min-width: 1000px) {
+  .\31 000px\:mx-auto {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .\31 000px\:inline-block {
+    display: inline-block;
+  }
+
+  .\31 000px\:flex {
+    display: flex;
+  }
+
   .\31 000px\:h-48 {
     height: 12rem;
   }
@@ -1699,6 +1714,143 @@ video {
 
   .\31 000px\:w-96 {
     width: 24rem;
+  }
+
+  .\31 000px\:w-940px {
+    width: 940px;
+  }
+
+  .\31 000px\:w-full {
+    width: 100%;
+  }
+
+  .\31 000px\:w-auto {
+    width: auto;
+  }
+
+  .\31 000px\:w-3\/4 {
+    width: 75%;
+  }
+
+  .\31 000px\:w-4\/5 {
+    width: 80%;
+  }
+
+  .\31 000px\:flex-1 {
+    flex: 1 1 0%;
+  }
+
+  .\31 000px\:flex-auto {
+    flex: 1 1 auto;
+  }
+
+  .\31 000px\:flex-grow {
+    flex-grow: 1;
+  }
+
+  .\31 000px\:flex-grow-0 {
+    flex-grow: 0;
+  }
+
+  .\31 000px\:basis-3\/4 {
+    flex-basis: 75%;
+  }
+
+  .\31 000px\:basis-1\/4 {
+    flex-basis: 25%;
+  }
+
+  .\31 000px\:basis-2\/4 {
+    flex-basis: 50%;
+  }
+
+  .\31 000px\:basis-28 {
+    flex-basis: 7rem;
+  }
+
+  .\31 000px\:basis-56 {
+    flex-basis: 14rem;
+  }
+
+  .\31 000px\:flex-col {
+    flex-direction: column;
+  }
+
+  .\31 000px\:items-start {
+    align-items: flex-start;
+  }
+
+  .\31 000px\:items-end {
+    align-items: flex-end;
+  }
+
+  .\31 000px\:items-center {
+    align-items: center;
+  }
+
+  .\31 000px\:justify-start {
+    justify-content: flex-start;
+  }
+
+  .\31 000px\:justify-end {
+    justify-content: flex-end;
+  }
+
+  .\31 000px\:justify-center {
+    justify-content: center;
+  }
+
+  .\31 000px\:justify-between {
+    justify-content: space-between;
+  }
+
+  .\31 000px\:gap-3 {
+    gap: 0.75rem;
+  }
+
+  .\31 000px\:gap-4 {
+    gap: 1rem;
+  }
+
+  .\31 000px\:gap-5 {
+    gap: 1.25rem;
+  }
+
+  .\31 000px\:gap-6 {
+    gap: 1.5rem;
+  }
+
+  .\31 000px\:gap-8 {
+    gap: 2rem;
+  }
+
+  .\31 000px\:gap-7 {
+    gap: 1.75rem;
+  }
+
+  .\31 000px\:gap-2 {
+    gap: 0.5rem;
+  }
+
+  .\31 000px\:rounded-lg {
+    border-radius: 0.5rem;
+  }
+
+  .\31 000px\:object-cover {
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+
+  .\31 000px\:text-left {
+    text-align: left;
+  }
+
+  .\31 000px\:text-right {
+    text-align: right;
+  }
+
+  .\31 000px\:text-end {
+    text-align: end;
   }
 }
 
@@ -1758,6 +1910,10 @@ video {
     margin-top: 1.75rem;
   }
 
+  .\31 260px\:flex {
+    display: flex;
+  }
+
   .\31 260px\:h-450px {
     height: 450px;
   }
@@ -1774,12 +1930,60 @@ video {
     width: 850px;
   }
 
+  .\31 260px\:w-1200px {
+    width: 1200px;
+  }
+
+  .\31 260px\:w-3\/5 {
+    width: 60%;
+  }
+
+  .\31 260px\:w-2\/5 {
+    width: 40%;
+  }
+
+  .\31 260px\:w-2\/4 {
+    width: 50%;
+  }
+
+  .\31 260px\:w-5\/12 {
+    width: 41.666667%;
+  }
+
+  .\31 260px\:basis-1\/4 {
+    flex-basis: 25%;
+  }
+
+  .\31 260px\:basis-3\/4 {
+    flex-basis: 75%;
+  }
+
+  .\31 260px\:basis-2\/4 {
+    flex-basis: 50%;
+  }
+
   .\31 260px\:flex-nowrap {
     flex-wrap: nowrap;
   }
 
+  .\31 260px\:place-items-end {
+    place-items: end;
+  }
+
+  .\31 260px\:items-end {
+    align-items: flex-end;
+  }
+
   .\31 260px\:gap-3 {
     gap: 0.75rem;
+  }
+
+  .\31 260px\:place-self-end {
+    place-self: end;
+  }
+
+  .\31 260px\:self-end {
+    align-self: flex-end;
   }
 
   .\31 260px\:px-24 {
